methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:9: error: ';' expected but 'return' found.
  }return vuBiscuit
   ^